--- a/package.json
+++ b/package.json
@@ -19,5 +19,15 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "whatsapp-web.js": "^1.26.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "@stylistic/eslint-plugin-ts": "^2.10.1",
+    "@types/qrcode-terminal": "^0.12.2",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
+    "typescript-eslint": "^8.13.0"
   }
 }
